repaired grid layout on mobile after pproduction testing

--- a/style/meetus.css
+++ b/style/meetus.css
@@ -5,16 +5,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
-     
+    max-height: none;
 }
 
 #meet_us_grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: auto;
-    grid-gap: 2%;
-    max-height: 100vh;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    max-height: none;
 }
 
 /* styling for each person */
@@ -165,6 +165,7 @@
 
     #meet_us_grid {    
         grid-template-columns: 1fr;
+        height: 100%;
     }
     .meet_us_person img {
         max-height: 150px;
